# routai

./: .env.example  OVERVIEW.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/agent/: utils.py
backend/app/agent/config/: __init__.py  constants.py  llm.py  prompts.py
backend/app/agent/graph/: routing.py  workflow.py
backend/app/agent/nodes/: analyser.py  logistics.py  optimiser.py  planner.py  reviewer.py  router.py  writer.py
backend/app/agent/schemas/: state.py
backend/app/api/: deps.py
backend/app/api/models/: models.py
backend/app/api/routes/: chat.py  chats.py  route.py  sessions.py
backend/app/api/services/: __init__.py  session_manager.py  streaming.py
backend/app/config/: __init__.py  config.py  logging.py
backend/app/models/: __init__.py  api.py  models.py  state.py
backend/app/tools/: __init__.py  accommodation.py  elevation.py  location.py  route.py  segment.py  utils.py  weather.py
backend/app/utils/: __init__.py  utils.py
backend/scripts/: accommodation.py  example.py  route.py  start_server.sh  temp_testing.py
backend/tests/: conftest.py
backend/tests/tools/: conftest.py  test_accommodation.py  test_location.py  test_route.py  test_segment.py  test_tools_utils.py  test_utils.py  test_weather.py
backend/tests/utils/: conftest.py  test_calculate_segments.py  test_fetch_route.py  test_get_accommodation.py  test_get_elevation_gain.py  test_reverse_geocode.py  test_utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  RouteModal.tsx  (+1 more)
(+4 files in other folders)
