[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "geopy>=2.4.1",
    "google-maps-routing>=0.7.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "numpy>=2.3.5",
    "polyline>=2.0.3",
    "pydantic>=2.12.4",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/"]